--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section class="hero">
-    <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
+    <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
     <h1>Md. Abul Hasnat Alvi</h1>
     <p>B.Sc. in Naval Architecture & Marine Engineering (BUET)</p>
     <p>Specialized in CFD, FEM, Structural Mechanics & Ship Design</p>
