--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - Alvi</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -21,10 +23,20 @@
 
   <section class="content">
     <h1>Contact Me</h1>
-    <p>Email: <a href="mailto:mdabulhasnatalvi2001@gmail.com">mdabulhasnatalvi2001@gmail.com</a></p>
-    <p>Phone: +8801558674105</p>
-    <p>LinkedIn: <a href="http://www.linkedin.com/in/mdabulhasnatalvi" target="_blank">Md. Abul Hasnat Alvi</a></p>
-    <p>GitHub: <a href="https://github.com/" target="_blank">github.com/yourusername</a></p>
+    <div class="contact-icons">
+      <p><i class="fas fa-envelope"></i> 
+        <a href="mailto:mdabulhasnatalvi2001@gmail.com">mdabulhasnatalvi2001@gmail.com</a>
+      </p>
+      <p><i class="fas fa-phone"></i> 
+        <a href="tel:+8801558674105">+8801558674105</a>
+      </p>
+      <p><i class="fab fa-linkedin"></i> 
+        <a href="http://www.linkedin.com/in/mdabulhasnatalvi" target="_blank">LinkedIn</a>
+      </p>
+      <p><i class="fab fa-github"></i> 
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      </p>
+    </div>
   </section>
 
   <footer>
@@ -32,3 +44,4 @@
   </footer>
 </body>
 </html>
+
