--- a/contact.html
+++ b/contact.html
@@ -24,18 +24,10 @@
   <section class="content">
     <h1>Contact Me</h1>
     <div class="contact-icons">
-      <p><i class="fas fa-envelope"></i> 
-        <a href="mailto:mdabulhasnatalvi2001@gmail.com">mdabulhasnatalvi2001@gmail.com</a>
-      </p>
-      <p><i class="fas fa-phone"></i> 
-        <a href="tel:+8801558674105">+8801558674105</a>
-      </p>
-      <p><i class="fab fa-linkedin"></i> 
-        <a href="http://www.linkedin.com/in/mdabulhasnatalvi" target="_blank">LinkedIn</a>
-      </p>
-      <p><i class="fab fa-github"></i> 
-        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-      </p>
+      <a href="mailto:mdabulhasnatalvi2001@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+      <a href="tel:+8801558674105"><i class="fas fa-phone"></i></a>
+      <a href="http://www.linkedin.com/in/mdabulhasnatalvi" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </section>
 
@@ -44,4 +36,5 @@
   </footer>
 </body>
 </html>
+
 
