--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Md. Abul Hasnat Alvi - Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+  <!-- Navbar -->
   <header>
     <nav class="navbar">
       <div class="logo">Alvi's Portfolio</div>
@@ -19,13 +21,20 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
-    <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+    <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
     <h1>Md. Abul Hasnat Alvi</h1>
     <p>B.Sc. in Naval Architecture & Marine Engineering (BUET)</p>
     <p>Specialized in CFD, FEM, Structural Mechanics & Ship Design</p>
+
+    <!-- View Works Button -->
+    <div style="margin-top: 20px;">
+      <a href="projects.html" class="btn"><i class="fa-solid fa-folder-open"></i> View My Works</a>
+    </div>
   </section>
 
+  <!-- Intro Section -->
   <section class="intro">
     <h2>Welcome</h2>
     <p>I am a motivated and detail-oriented graduate with a strong background in simulation, ship design, 
