--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - Md. Abul Hasnat Alvi</title>
+  <title>Projects - Alvi</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -21,75 +20,23 @@
   </header>
 
   <section class="content">
-    <h1>My Projects & Works</h1>
-    <p>Below are some of my academic, research, and industrial works.  
-       Click <strong>“View Work”</strong> to explore detailed files and reports hosted on Google Drive.</p>
-
+    <h1>My Projects & Research</h1>
     <div class="project-grid">
-
       <div class="project-card">
         <img src="images/project1.jpg" alt="CFD Research">
-        <h3>Simulation of Engine Room Ventilation</h3>
-        <p>CFD study using Star CCM+ to predict air temperature distribution and optimize ventilation layout for inland ships.</p>
-        <a href="https://drive.google.com/drive/folders/15OnSs9pWbijuPxlulqWCS10mUkOKg4Gj?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
+        <h3>Undergraduate Thesis</h3>
+        <p>Simulation of engine room ventilation for inland ships of Bangladesh using Star CCM+.</p>
       </div>
-
       <div class="project-card">
         <img src="images/project2.jpg" alt="LPG Carrier Design">
-        <h3>Design of a 36,000 CBM LPG Carrier</h3>
-        <p>Concept and structural design of a seagoing LPG carrier, including hydrostatics, propulsion, and classification compliance.</p>
-        <a href="https://drive.google.com/drive/folders/15WFPHkNY7xKBNfTKzsq-tmAstJKlKEyb?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
+        <h3>Design of LPG Carrier</h3>
+        <p>Designed a 36,000 CBM ocean-going LPG carrier under BUET faculty supervision.</p>
       </div>
-
       <div class="project-card">
-        <img src="images/project3.jpg" alt="Industrial Project">
-        <h3>Safety Equipment Analysis at CDDL</h3>
-        <p>Industrial report and data study on safety equipment and implementation at Chittagong Dry Dock Ltd.</p>
-        <a href="https://drive.google.com/drive/folders/1I1xEB517HmBzS_uCDvGTcJruFMclrC3M?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
+        <img src="images/project3.jpg" alt="Industry Project">
+        <h3>Industry Project</h3>
+        <p>Industrial study on safety equipment at Chittagong Dry Dock Ltd (CDDL).</p>
       </div>
-
-      <div class="project-card">
-        <img src="images/project4.jpg" alt="CFD Project">
-        <h3>CFD Simulation Practice Collection</h3>
-        <p>Set of computational fluid dynamics simulations performed in COMSOL and Star CCM+ for academic research.</p>
-        <a href="https://drive.google.com/drive/folders/1IKZXCqiYEObbujbrybT_Nuw-EP5xuo4r?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
-      </div>
-
-      <div class="project-card">
-        <img src="images/project5.jpg" alt="FEM Project">
-        <h3>Finite Element Method (FEM) Analysis</h3>
-        <p>Simulation of structural stresses and modal vibration analysis using ABAQUS and MATLAB-based modeling.</p>
-        <a href="https://drive.google.com/drive/folders/1It1zzcm0wszxcCBpJ3Fp9O9V5bZY2G9x?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
-      </div>
-
-      <div class="project-card">
-        <img src="images/project6.jpg" alt="Ship Design Software">
-        <h3>Ship Design & Modeling Practice</h3>
-        <p>Collection of 2D/3D ship design exercises using AutoCAD, Rhinoceros, and MAXSURF software tools.</p>
-        <a href="https://drive.google.com/drive/folders/1aU9UrVnTkxUhigscAXhFabOo6inLoM69?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
-      </div>
-
-      <div class="project-card">
-        <img src="images/project7.jpg" alt="Machine Learning Course">
-        <h3>Machine Learning Course Projects</h3>
-        <p>Completed projects from BUET Robotics Club’s Basic Machine Learning Course demonstrating engineering data analysis.</p>
-        <a href="https://drive.google.com/drive/folders/1pmRyAr9LgI258wr5x1iXbTKOA7AVAz6y?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
-      </div>
-
-      <div class="project-card">
-        <img src="images/project8.jpg" alt="Solidworks">
-        <h3>SolidWorks 3D Modeling Collection</h3>
-        <p>Various 3D mechanical designs and assembly models created during the BUET Automobile Club training.</p>
-        <a href="https://drive.google.com/drive/folders/1uvvkEnORgjVDvWMlx6VcsMO5cPt-lYmM?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
-      </div>
-
-      <div class="project-card">
-        <img src="images/project9.jpg" alt="Academic Documents">
-        <h3>Academic & Report Archives</h3>
-        <p>Supporting documents and technical reports from coursework, including structure, thermodynamics, and hydrodynamics.</p>
-        <a href="https://drive.google.com/drive/folders/1wxk0rX6LU3gqEdKFF6obw67ZwKqmHd-2?usp=sharing" target="_blank" class="btn"><i class="fa-solid fa-eye"></i> View Work</a>
-      </div>
-
     </div>
   </section>
 
